--- a/index.html
+++ b/index.html
@@ -21,19 +21,8 @@
       </script>
       <![endif]-->
       <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="  crossorigin="anonymous"></script>
-      <script src="https://wchat.freshchat.com/js/widget.js"></script>
       <!-- Hotjar Tracking Code for www.huxa.co -->
-<!-- Hotjar Tracking Code for https://www.araa.co -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:830708,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+
    </head>
    <body>
       <div class="">
@@ -467,17 +456,20 @@
       });
       
    </script>
-   <script>
-      window.fcWidget.init({
-        token: "0acdbaa0-6989-48d3-af0c-18cb62dd49fb",
-        host: "https://wchat.freshchat.com",
-        config: {
+    <script>
+      function initFreshChat() {
+        window.fcWidget.init({
+          token: "b1e41f19-3870-4f9c-93b6-1cec22d0c21e",
+          host: "https://wchat.freshchat.com",
+          config: {
           headerProperty:{
              hideChatButton: true,
           }
         }
-      });
-   </script>
+        });
+      }
+      function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+    </script>
    <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-64496523-1"></script>
    <script>
